WebCore/plugins/PluginView.cpp
@@ -850,6 +850,7 @@ PluginView::PluginView(Frame* parentFrame, const IntSize& size, PluginPackage* p
     , m_isJavaScriptPaused(false)
     , m_isHalted(false)
     , m_hasBeenHalted(false)
+    , m_haveCalledSetWindow(false)
 {
     if (!m_plugin) {
         m_status = PluginStatusCanNotFindPlugin;
