WebCore/plugins/PluginView.h
@@ -385,6 +385,8 @@ private:
         bool m_isHalted;
         bool m_hasBeenHalted;
 
+        bool m_haveCalledSetWindow;
+
         static PluginView* s_currentPluginView;
     };
 
